foi feito marts e intermediate e staging e relacionando as tabelas. Iniciei a dim

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbt_northwind'
+name: 'dbt_mmichele_erp_northwind'
 version: '1.0.0'
 config-version: 2
 
@@ -32,7 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  dbt_northwind:
+  dbt_mmichele_erp_northwind:
    
     staging:
       +materialized: view
@@ -43,6 +43,6 @@ models:
       +schema: marts
 
 seeds:
-  dbt_northwind:
+  dbt_mmichele_erp_northwind:
     erp_northwind:
       +schema: erp_northwind
